2014-05-30 Josef Cacek (1.5.2)
  * Fix -ff option in Verifier (it's flag without arguments, till now an argument was required)
  * Fix exit codes in Verifier (the non-zero codes used even if the -ff is not used)
  * Disable fallbacks for key alias lookup. Originally if the alias name was used
    and it doesn't existed in the keystore, the first key in the selected keystore was used.

2013-10-02 Josef Cacek (1.5.1)
  * Added support for signature field placeholders in custom L2 texts. Possible values are:
    - ${signer}
    - ${timestamp}
    - ${location}
    - ${reason}
    - ${contact}

2013-09-01 Josef Cacek (1.5.0)
  * Implement image rendering using JPedal
  * Upgrade libraries used for PDF preview (PDFBox, PDFRenderer)
  * Reimplementation of selection in preview window

2013-08-31 Vaclav Slavik
  * Fixed certificates handling in signature verification - make the OCSP verification more robust. Thanks for the fix!

2013-07-10 Josef Cacek (1.4.5)
  * Fixed non-working --crl option when using CLI (batch mode)

2013-02-05 Josef Cacek (1.4.4)
  * SunPKCS11 security provider removed at the end

2012-11-22 Josef Cacek (1.4.3)
  * Fixed NPE in signing encrypted PDFs from CLI

2012-11-22 Josef Cacek (1.4.2)
  * Fixed signing PDFs protected only with an owner password, but without user password

2012-10-08 Josef Cacek (1.4.1)
  * Fix for using TSA authentication from command line (https://groups.google.com/forum/?fromgroups=#!topic/jsignpdf/c5zAObNmQZg)
  * Added possibility to use different keystore types  for TSA CERTIFICATE authentication (only in command line -tsct)

2012-09-24 Josef Cacek (1.4.0)
  * JSignPdf's retiring - read https://groups.google.com/forum/#!topic/jsignpdf/PMduEVZcSko

2012-09-03 Josef Cacek
  * Merged Greek translation from Vassilis Michalitsis. Thanks for it!

2012-08-11 Josef Cacek (1.3.9 test)
  * build scripts run on linux now

2012-07-16 Josef Cacek
  * Certificate authentication for TSA