@@ -1,5 +1,5 @@
-jsignpdf.version=1.5.2
-jsignpdf.cvs.tag=JSignPdf_1_5_2
+jsignpdf.version=1.5.3
+jsignpdf.cvs.tag=JSignPdf_1_5_3
 jsignpdf.splashimage.path=doc/icon/splash_1.0.0.bmp
 
 #ooo.exec=c:\\Program Files\\LibreOffice 3.5\\program\\soffice.exe
